refactor: 도메인 별 간접참조로 변경